feat/lphub: profile statistics
